# my-folly

./: .gitignore  CMakeLists.txt
src/: bounded_queue.h  mpmc_queue.h  portability.h
src/detail/: futex.cpp  futex.h  turn_sequencer.cpp  turn_sequencer.h
test/: CMakeLists.txt  futex_demo.cpp  futex_test.cpp  mpmc_queue_benchmark.cpp  turn_sequencer_test.cpp
